@@ -57,6 +57,9 @@ XBT_PUBLIC(char *) xbt_str_from_file(FILE * file);
 
 XBT_PUBLIC(int) xbt_str_start_with(const char* str, const char* start);
 
+XBT_PUBLIC(long int) xbt_str_parse_int(const char* str, const char* error_msg);
+XBT_PUBLIC(double) xbt_str_parse_double(const char* str, const char* error_msg);
+
 #define DJB2_HASH_FUNCTION
 //#define FNV_HASH_FUNCTION
 
