@@ -40,6 +40,10 @@ SimGrid (3.13) UNRELEASED; urgency=low
  * Kill the setset data container: MC don't use it anymore.
  * Kill the queue data container: it made more sense with GRAS.
  * Kill the xbt_peer_t data type: it's useless without GRAS.
+ * New functions:
+   - xbt_dynar_sort_strings(), when the content is char*
+   - xbt_str_parse_int / xbt_str_parse_double, wrapping strtol/strtod
+     They throw exceptions on invalid input.
  
  JAVA:
  * Remove the ability to write internal plugins in Java. 
